--- a/Puzzle/index.html
+++ b/Puzzle/index.html
@@ -61,67 +61,16 @@
       <div class="grid-item">
       <input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
+      <input type="text" class="ip" maxlength="1">
+      <p class="txt">3</p> </div>
       <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
+      <input type="text" class="ip" maxlength="1">
+      <p class="txt">4</p> </div>
       <div class="grid-item">
       <input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
+      <input type="text" class="ip" maxlength="1">
+      <p class="txt">5</p> </div>
       <div class="grid-item">
       <input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item">
@@ -131,11 +80,14 @@
       <div class="grid-item">
       <input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
+      <input type="text" class="ip" maxlength="1">
+      <p class="txt">6</p> </div>
       <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
+      <input type="text" class="ip" maxlength="1">
+      <p class="txt">7</p> </div>
       <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
+      <input type="text" class="ip" maxlength="1">
+      <p class="txt">8</p> </div>
       <div class="grid-item">
       <input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item">
@@ -147,15 +99,18 @@
       <div class="grid-item">
       <input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
+      <input type="text" class="ip" maxlength="1">
+      <p class="txt">9</p> </div>
       <div class="grid-item">
       <input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item">
       <input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
+      <input type="text" class="ip" maxlength="1">
+      <p class="txt">10</p> </div>
       <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
+      <input type="text" class="ip" maxlength="1">
+      <p class="11"></p> </div>
       <div class="grid-item">
       <input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item">
@@ -169,9 +124,11 @@
       <div class="grid-item">
       <input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
+      <input type="text" class="ip" maxlength="1">
+      <p class="txt">12</p> </div>
       <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
+      <input type="text" class="ip" maxlength="1">
+      <p class="txt">13</p> </div>
       <div class="grid-item">
       <input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item">
@@ -185,7 +142,8 @@
       <div class="grid-item">
       <input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
+      <input type="text" class="ip" maxlength="1">
+      <p class="txt">14</p> </div>
       <div class="grid-item">
       <input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item">
@@ -193,15 +151,18 @@
       <div class="grid-item">
       <input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
+      <input type="text" class="ip" maxlength="1">
+      <p class="txt">15</p> </div>
       <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
+      <input type="text" class="ip" maxlength="1">
+      <p class="txt">16</p> </div>
       <div class="grid-item">
       <input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item">
       <input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
+      <input type="text" class="ip" maxlength="1">
+      <p class="txt">17</p> </div>
       <div class="grid-item">
       <input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item">
@@ -217,7 +178,8 @@
       <div class="grid-item">
       <input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item">
-      <input type="text" class="ip" maxlength="1"></div>
+      <input type="text" class="ip" maxlength="1">
+      <p class="txt">18</p> </div>
       <div class="grid-item">
       <input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item">
@@ -236,6 +198,67 @@
       <input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item">
       <input type="text" class="ip" maxlength="1">
+      <p class="txt">19</p> </div>
+      <div class="grid-item">
+      <input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item">
+      <input type="text" class="ip" maxlength="1">
+      <p class="20"></p> </div>
+      <div class="grid-item">
+      <input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item">
+      <input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item">
+      <input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item">
+      <input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item">
+      <input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item">
+      <input type="text" class="ip" maxlength="1">
+      <p class="txt">21</p> </div>
+      <div class="grid-item">
+      <input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item">
+      <input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item">
+      <input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item">
+      <input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item">
+      <input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item">
+      <input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item">
+      <input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item">
+      <input type="text" class="ip" maxlength="1">
+      <p class="txt">22</p> </div>
+      <div class="grid-item">
+      <input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item">
+      <input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item">
+      <input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item">
+      <input type="text" class="ip" maxlength="1">
+      <p class="txt">23</p> </div>
+      <div class="grid-item">
+      <input type="text" class="ip" maxlength="1">
+      <p class="txt">24</p> </div>
+      <div class="grid-item">
+      <input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item">
+      <input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item">
+      <input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item">
+      <input type="text" class="ip" maxlength="1">
+      <p class="txt">25</p> </div>
+      <div class="grid-item">
+      <input type="text" class="ip" maxlength="1"></div>
+      <div class="grid-item">
+      <input type="text" class="ip" maxlength="1">
       <p class="txt">26</p>  </div>
       <div class="grid-item">
       <input type="text" class="ip" maxlength="1"></div>
@@ -245,7 +268,7 @@
 
     <button class="bot" onclick="docapture();" name="Submit">Submit</button>
     <a href="" id="blank"></a>
-
+     <h2>Questions</h2>
     <p>1.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
     <p>2.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
     <p>3.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
