--- a/Puzzle/index.html
+++ b/Puzzle/index.html
@@ -272,6 +272,7 @@
     <p>1.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
     <p>2.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
     <p>3.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+    <p>19.കോവിഡ് ദ്രുത പരിശോധനയായ ഈ ടെസ്റ്റിൻ്റെ റിസൽട്ട് അത്ര വിശ്വാസയോഗ്യമല്ലയെന്ന് പറയപ്പെടുന്നു, ഏത് ടെസ്റ്റ് ?(6)</p>
 
   </body>
 </html>
