--- a/Puzzle/index.html
+++ b/Puzzle/index.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=0.8">
     <link rel="stylesheet" href="styles.css">
     <script src="jquery-1.11.3.min.js">
 
@@ -27,26 +27,24 @@
     <title>Crossword</title>
   </head>
   <body>
-    <h1>ജ്ഞാനസാഗരം വായനശാല,</h1>
-    <p>Reg. No.1873/56, തിരുവാലൂർ.</p>
+    <h1 class="name">ജ്ഞാനസാഗരം വായനശാല,</h1>
+    <p class="desig">Reg. No.1873/56, തിരുവാലൂർ.</p>
     <h2> "ഓൺലൈൻ ഫെസ്റ്റ് -2020" </h2>
-    <h3> പദപ്രശ്നം:</h3>
-    <p>11.05.2020, തിങ്കൾ</p>
-    <p>a) താഴെ കൊടുത്തിട്ടുള്ള കോവിഡുമായി ബണ്ഡ പ്പെട്ട ചോദ്യങ്ങൾക്കു പറഞ്ഞിരിക്കുന്ന പ്രകാരം ഉത്തരങ്ങൾ ഇതോടൊപ്പം കൊടുത്തിട്ടുള്ള കോളങ്ങളിൽ ഇംഗ്ലീഷിൽ പൂരിപ്പിച്ചാണ് അയക്കേണ്ടത്. </p>
-    <p>b) ഈ കോളങ്ങളിൽത്തന്നെ ഫോട്ടൊ എഡിറ്റർ ഉപയോഗിച്ച് ഉത്തരങ്ങൾ ഇംഗ്ലീഷിൽ ഒരു കോളത്തിൽ ഒരു അക്ഷരം വീതം ഉത്തരങ്ങൾ പൂരിപ്പിച്ച് അയയ്ക്കാവുന്നതാണ്. അല്ലെങ്കിൽ ഇവിടെ ചേർത്തിരിക്കുന്നതു പോലെ പേപ്പറിൽ ഇത്രയും എണ്ണം,  ഇതുപോലെ കോളങ്ങൾ ഉണ്ടാക്കി പൂരിപ്പിച്ച് ഫോട്ടൊ എടുത്ത് വ്യക്തമാകുന്ന രീതിയിൽ അയച്ചാലും മതിയാകുന്നതാണ്.</p>
+    <h3 class="name"> പദപ്രശ്നം:</h3>
+    <p class="desig">11.05.2020, തിങ്കൾ</p>
+    <p>a) മത്സരത്തിലേക്ക് താഴെ കൊടുത്തിട്ടുള്ള കോവിഡുമായി ബന്ധപ്പെട്ട ചോദ്യങ്ങൾക്ക്, പറഞ്ഞിരിക്കുന്ന പ്രകാരം ഉത്തരങ്ങൾ ഇതോടൊപ്പം കൊടുത്തിട്ടുള്ള ചതുരത്തിലെ കോളങ്ങളിൽ ഇംഗ്ലീഷിൽ പൂരിപ്പിച്ചാണ് അയക്കേണ്ടത്.  </p>
+    <p>b) ഇതോടൊപ്പുള്ള ചതുരത്തിലെ കോളങ്ങളിൽത്തന്നെ ക്ലിക്ക് ചെയ്ത് ഉത്തരങ്ങൾ ഇംഗ്ലീഷിൽ പൂരിപ്പിച്ച് സ്ക്രീൻ ഷോട്ട് എടുത്തോ, SUBMIT ക്ലിക്ക് ചെയ്തു ഡൗൺലോഡു ചെയ്തതോ  അയയ്ക്കാവുന്നതാണ്. അല്ലെങ്കിൽ ഇവിടെ കൊടുത്തിരിക്കുന്നതു പോലെ പേപ്പറിൽ ഇത്രയും എണ്ണം,  ഇതുപോലെ കോളങ്ങൾ ഉണ്ടാക്കി പൂരിപ്പിച്ച് ഫോട്ടൊ എടുത്ത് വ്യക്തമാകുന്ന രീതിയിൽ അയച്ചാലും മതിയാകുന്നതാണ്.</p>
     <p>c) ചോദ്യങ്ങൾക്കു പറഞ്ഞിട്ടുള്ള രീതിയിൽ കോളത്തിൽ പൂരിപ്പിച്ച ഉത്തരങ്ങൾ 13.05.2070(ബുധൻ) വൈകിട്ട് 5ന് മുൻപായി  9446470689 എന്ന നമ്പറിലേക്ക് WhatsApp അയയ്ക്കണ്ടതാണ്</p>
     <p>d) മത്സരത്തിന് ഒരാൾ ഒരു എൻട്രിയിൽ കൂടുതൽ അയയ്ക്കാൻ പാടുള്ളതല്ല.</p>
     <p>e) മത്സരത്തിൽ പ്രായഭേദമെന്യെ, എവിടെയുമുള്ള ആർക്കു വേണമെങ്കിലും പങ്കെടുക്കാവുന്നതാണ്.</p>
     <p>f) മത്സരവുമായി ബന്ധപ്പെട്ട കാര്യങ്ങളിൽ സംഘാടക സമിതിയുടെ തീരുമാനം അന്തിമമായിരിക്കും.</p>
-    <p>  </p>
     <p>ഏവരുടേയും സഹകരണം പ്രതീക്ഷിച്ചു കൊണ്ട്....</p>
-    <p></p>
     <p>സ്നേഹപൂർവ്വം,</p>
-    <p></p>
     <p class="name">കെ.വി.പോൾ</p>
-    <p class="desig">(പ്രസിസ്റ്)</p>
+    <p class="desig">(പ്രസിഡൻ്റ്)</p>
     <p class="name">പി.എസ്.അനിൽ</p>
     <p class="desig">(സെക്രട്ടറി)</p>
+
 
 
     <div  id="box" class="grid-container">
@@ -281,26 +279,26 @@
     <button class="bot" onclick="docapture();" name="Submit">Submit</button>
     <a href="" id="blank"></a>
      <h2>ചോദ്യങ്ങൾ:</h2>
-     <h3>വലത്തോട്ട്(Left to Right):</h3>
+     <h3 class="heading">വലത്തോട്ട്(Left to Right):</h3>
     <p>1. പകർച്ചവ്യാധി പിടിപെട്ടോയെന്നു സംശയിക്കുന്നവരെ നിരീക്ഷണത്തിൽ വയ്ക്കുന്നതിനെ പറയുന്നത് (10)</p>
     <p>8. കോവിഡ് ബാധിതരെ ചികിൽസിക്കുന്ന ആരോഗ്യ പ്രവർത്തകർ അണിയുന്ന പ്രത്യേക തരം സുരക്ഷാ കിറ്റ് (3)</p>
     <p>11. കോവിഡ് വ്യാപനം തടയാൻ രാജ്യമൊട്ടാകെ മാർച്ച്-22 ന് ഒരു ദിവസം ഇത് ആചരിക്കുമെന്ന് പ്രധാനമന്ത്രി മാർച്ച്-19 ന് പ്രഖ്യാപിച്ചു (6)</p>
     <p>16. കോവിഡ് ദുരിതകാലത്ത് കേരള സർക്കാർ എല്ലാ കുടുംബങ്ങൾക്കും ഇതു നൽകി (4)</p>
     <p>17. വാഹന ഗതാഗതം തടസപ്പെട്ടതിനാൽ തമിഴ്നാട്ടിലെ നമക്കലിൽ ഇത് 50 കോടി എണ്ണം കെട്ടിക്കിടക്കുകയാണെന്ന് പത്രറിപ്പോർട്ടുകളുണ്ടായിരുന്നു (3)</p>
     <p>18. ഇപ്പോൾ പൊതുസ്ഥലത്ത് ഇറങ്ങി നടക്കണമെങ്കിൽ ഇത് നിർബന്ധമാക്കി (4)</p>
-    <p>19. കോവിഡ് ദ്രുത പരിശോധനയായ ഈ ടെസ്റ്റിൻ്റെ റിസൽട്ട് അത്ര വിശ്വാസയോഗ്യമല്ലയെന്ന് പറയപ്പെടുന്നു (6)</p>
+    <p>19. കോവിഡ് ദ്രുത പരിശോധനയായ ഈ ടെസ്റ്റിൻ്റെ റിസൽട്ട് അത്ര വിശ്വാസയോഗ്യമല്ലയെന്ന് പറയപ്പെടുന്നു (5)</p>
     <p>22. കോവിഡ് കാലത്ത് പണിയില്ലാതായ അനേകർക്കൊപ്പം സിനിമാരംഗത്ത് വൻ പ്രതിഫലം പറ്റുന്ന ഈ വിഭാഗവും വീട്ടിലിരുപ്പാണ് (4)</p>
     <p>23. കോവിഡിനെ പ്രതിരോധിക്കാൻ ഏറ്റവും ഫലപ്രദമായ മാർഗ്ഗം സാമൂഹികമായി ഇത് പാലിക്കുക എന്നതാണ് (10)</p>
     <p></p>
-    <h3>ഇടത്തോട്ട്(Right to Left):</h3>
+    <h3 class="heading">ഇടത്തോട്ട്(Right to Left):</h3>
     <p>4. ഈ കോവിഡ് കാലത്ത് ഭക്ഷണ വിതരണത്തിനായി കേരളമെമ്പാടും തുറന്ന, കോവിഡ് സമ്മാനിച്ച ഈ പുതിയ വാക്കിൻ്റെ ചുരുക്ക രൂപം (2)</p>
     <p>6. ചൈനയിലെ ഈ പ്രവിശ്യയിലാണ് കോവിഡ് ആദ്യമായി പൊട്ടിപ്പുറപ്പെട്ടത് (5)</p>
     <p>10. കോവിഡ് വ്യാപനം ഏറുന്ന പ്രദേശങ്ങളെ ഈ പേരിലാണ് തരം തിരിച്ച് നിയന്ത്രണങ്ങൾ കർശനമാക്കുന്നത് (7)</p>
     <p>13. സാമ്പത്തീക പ്രതിസന്ധി മറികടക്കാൻ കേന്ദ്ര സർക്കാർ കേന്ദ്ര ജീവനക്കാരുടെ ഇതിൻ്റെ വർദ്ധനവ് ഒന്നര വർഷത്തേക്ക് മരവിപ്പിക്കാൻ തീരുമാനിച്ചു (2)</p>
-    <p>14. 'കൊറോണ വൈറസ് ഡിസീസ് ' എന്നതാണ് ഇതിൻ്റെ ചുരുക്കരൂപം (5)</p>
+    <p>14. 'കൊറോണ വൈറസ് ഡിസീസ്' എന്നതാണ് ഇതിൻ്റെ ചുരുക്കരൂപം (5)</p>
     <p>22. ഇതുപയോഗിച്ച് കൈ നന്നായി കഴുകിയാൽ തുരത്താവുന്നതേയുള്ളൂ കൊറോണ വൈറസിനെ (4)</p>
     <p></p>
-    <h3>താഴെയ്ക്ക്(Downward):</h3>
+    <h3 class="heading">താഴെയ്ക്ക്(Downward):</h3>
     <p>2. കോവിഡ് മൂലം ലോകത്ത് ഇതുവരെ ഏറ്റവും കൂടുതൽ ആളുകൾ മരിച്ച രാജ്യം (7)</p>
     <p>3. കോവിഡ് കാലത്ത് രാവും പകലും സ്ത്യുത്യർഹ സേവനം ചെയ്യുന്ന കേരളത്തിലെ യൂണിഫോമിട്ട ഈ വിഭാഗത്തിൻ്റെ ചുരുക്കപ്പേര് (2)</p>
     <p>7. ലോകാരോഗ്യ സംഘടന - കോവിഡ് മാർഗ്ഗ നിർദ്ദേശകരംഗത്ത് അവസാന വാക്ക് (3)</p>
@@ -311,11 +309,11 @@
     <p>19. ഈ സോണിൽ നിയന്ത്രണങ്ങൾ കർശനമാണ് (3)</p>
     <p>20. നമുക്കായി സുപ്രധാന നിർദ്ദേശങ്ങൾ തരുന്ന പ്രധാനമന്ത്രിയെ നാം ചുരുക്കി ഇങ്ങനെയാണ് വിളിക്കാറ് (2)</p>
     <p></p>
-    <h3>മുകളിലേക്ക്(Upwards)</h3>
+    <h3 class="heading">മുകളിലേക്ക്(Upwards)</h3>
     <p>21. ഇന്ത്യയിലെ സംസ്ഥാനങ്ങളിലും മറ്റു രാജ്യങ്ങളിലും നടപ്പാക്കുന്ന സമ്പൂർണ്ണ അടച്ചിടൽ(8)</p>
     <p>24. ആരോഗ്യരംഗത്ത് വിലമതിക്കാനാവാത്ത സേവനം പ്രദാനം ചെയ്യുന്ന, ഇന്ത്യയിലെ ഡോക്ടർമാരുടെ വോളൻ്ററി സംഘടനയുടെ ചുരുക്കരൂപം(3)</p>
     <p>25. കോവിഡ് പ്രതിരോധത്തിൻ്റെ ബാലപാഠം ഇതാണ് - കണ്ണ്, വായ്, പിന്നെ ഇതിലും കൈ കൊണ്ട് തൊടരുത് (4)</p>
-    <p>26. കോവിഡ് തകർത്താടിയ ഒരു യൂറോപ്യൻ രാജ്യം - ക്രൈസ്തവർക്ക് ഈ നാടിനോട് ഒരു വൈകാരിക ബന്ധം കൂടിയുണ്ട്(5</p>
+    <p>26. കോവിഡ് തകർത്താടിയ ഒരു യൂറോപ്യൻ രാജ്യം - ക്രൈസ്തവർക്ക് ഈ നാടിനോട് ഒരു വൈകാരിക ബന്ധം കൂടിയുണ്ട് (5)</p>
 
 
   </body>
