--- a/Puzzle/index.html
+++ b/Puzzle/index.html
@@ -27,7 +27,7 @@
     <title>Crossword</title>
   </head>
   <body>
-    <h1 class="name">ജ്ഞാനസാഗരം വായനശാല,</h1>
+    <h1 class="m-heading">ജ്ഞാനസാഗരം വായനശാല,</h1>
     <p class="desig">Reg. No.1873/56, തിരുവാലൂർ.</p>
     <h2> "ഓൺലൈൻ ഫെസ്റ്റ് -2020" </h2>
     <h3 class="name"> പദപ്രശ്നം:</h3>
