--- a/Puzzle/index.html
+++ b/Puzzle/index.html
@@ -30,7 +30,7 @@
     <h1 class="m-heading">ജ്ഞാനസാഗരം വായനശാല,</h1>
     <p class="desig">Reg. No.1873/56, തിരുവാലൂർ.</p>
     <h2> "ഓൺലൈൻ ഫെസ്റ്റ് -2020" </h2>
-    <h3 class="name"> പദപ്രശ്നം:</h3>
+    <h3 class="name"> പദപ്രശ്നം(ഇംഗ്ലീഷ്): </h3>
     <p class="desig">11.05.2020, തിങ്കൾ</p>
     <p>a) മത്സരത്തിലേക്ക് താഴെ കൊടുത്തിട്ടുള്ള കോവിഡുമായി ബന്ധപ്പെട്ട ചോദ്യങ്ങൾക്ക്, പറഞ്ഞിരിക്കുന്ന പ്രകാരം ഉത്തരങ്ങൾ ഇതോടൊപ്പം കൊടുത്തിട്ടുള്ള ചതുരത്തിലെ കോളങ്ങളിൽ ഇംഗ്ലീഷിൽ പൂരിപ്പിച്ചാണ് അയക്കേണ്ടത്.  </p>
     <p>b) ഇതോടൊപ്പുള്ള ചതുരത്തിലെ കോളങ്ങളിൽത്തന്നെ ക്ലിക്ക് ചെയ്ത് ഉത്തരങ്ങൾ ഇംഗ്ലീഷിൽ പൂരിപ്പിച്ച് സ്ക്രീൻ ഷോട്ട് എടുത്തോ, SUBMIT ക്ലിക്ക് ചെയ്തു ഡൗൺലോഡു ചെയ്തതോ  അയയ്ക്കാവുന്നതാണ്. അല്ലെങ്കിൽ ഇവിടെ കൊടുത്തിരിക്കുന്നതു പോലെ പേപ്പറിൽ ഇത്രയും എണ്ണം,  ഇതുപോലെ കോളങ്ങൾ ഉണ്ടാക്കി പൂരിപ്പിച്ച് ഫോട്ടൊ എടുത്ത് വ്യക്തമാകുന്ന രീതിയിൽ അയച്ചാലും മതിയാകുന്നതാണ്.</p>
