--- a/Puzzle/index.html
+++ b/Puzzle/index.html
@@ -301,6 +301,7 @@
     <h3 class="heading">താഴെയ്ക്ക്(Downward):</h3>
     <p>2. കോവിഡ് മൂലം ലോകത്ത് ഇതുവരെ ഏറ്റവും കൂടുതൽ ആളുകൾ മരിച്ച രാജ്യം (7)</p>
     <p>3. കോവിഡ് കാലത്ത് രാവും പകലും സ്ത്യുത്യർഹ സേവനം ചെയ്യുന്ന കേരളത്തിലെ യൂണിഫോമിട്ട ഈ വിഭാഗത്തിൻ്റെ ചുരുക്കപ്പേര് (2)</p>
+    <p>5. കേരളത്തിലെ ആരോഗ്യമന്ത്രിയുടെ പേരിനെ ഇംഗ്ലീഷിൽ ഇങ്ങനെ ചുരുക്കിയെഴുതാം (2)</p>
     <p>7. ലോകാരോഗ്യ സംഘടന - കോവിഡ് മാർഗ്ഗ നിർദ്ദേശകരംഗത്ത് അവസാന വാക്ക് (3)</p>
     <p>9. ഈ കൊച്ചു വടക്കു കിഴക്കൻ സംസ്ഥാനത്ത് ഇതുവരെ ഒരു കോവിഡ് കേസു പോലും റിപ്പോർട്ടു ചെയ്തിട്ടില്ല (6)</p>
     <p>11. കോവിഡ് ബാധിതർക്ക് ആശുപത്രി ജീവനക്കാർ ക്യത്യതയോടെയും സൂഷ്മതയോടെയും ഇത് പ്രദാനം ചെയ്യുന്നു (4)</p>
