--- a/Puzzle/index.html
+++ b/Puzzle/index.html
@@ -120,7 +120,7 @@
       <p class="txt">10</p> </div>
       <div class="grid-item">
       <input type="text" class="ip" maxlength="1">
-      <p class="11"></p> </div>
+      <p class="txt">11</p> </div>
       <div class="grid-item">
       <input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item">
@@ -213,7 +213,7 @@
       <input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item">
       <input type="text" class="ip" maxlength="1">
-      <p class="20"></p> </div>
+      <p class="txt">20</p> </div>
       <div class="grid-item">
       <input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item">
