--- a/Puzzle/index.html
+++ b/Puzzle/index.html
@@ -58,14 +58,14 @@
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"></div>
+      <div class="no" class="grid-item"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">4</p> </div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"></div>
+      <div class="no" class="grid-item"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">5</p></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">6</p> </div>
-      <div class="grid-item"></div>
+      <div class="no" class="grid-item"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">7</p> </div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">8</p> </div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">9</p> </div>
@@ -76,16 +76,16 @@
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">13</p> </div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"></div>
+      <div class="no" class="grid-item"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">14</p></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"></div>
+      <div class="no" class="grid-item"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"></div>
+      <div class="no" class="grid-item"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">15</p> </div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
@@ -102,14 +102,14 @@
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"></div>
+      <div class="no" class="grid-item"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">19</p> </div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"></div>
+      <div class="no" class="grid-item"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"></div>
+      <div class="no" class="grid-item"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">20</p> </div>
@@ -119,10 +119,10 @@
       <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">22</p> </div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"></div>
+      <div class="no" class="grid-item"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"></div>
+      <div class="no" class="grid-item"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">23</p> </div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
@@ -143,7 +143,7 @@
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
-      <div class="grid-item"></div>
+      <div class="no" class="grid-item"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"><p class="txt">28</p> </div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
       <div class="grid-item"><input type="text" class="ip" maxlength="1"></div>
