--- a/Puzzle/index.html
+++ b/Puzzle/index.html
@@ -30,7 +30,7 @@
     <h1 class="m-heading">ജ്ഞാനസാഗരം വായനശാല,</h1>
     <p class="desig">Reg. No.1873/56, തിരുവാലൂർ.</p>
     <h2> "ഓൺലൈൻ ഫെസ്റ്റ് -2020" </h2>
-    <h3 class="name"> പദപ്രശ്നം(ഇംഗ്ലീഷ്): </h3>
+    <h3 class="name">  പദപ്രശ്നം(മലയാളം): </h3>
     <p class="desig">18.05.2020, തിങ്കൾ</p>
     <p>a) മത്സരത്തിലേക്ക് താഴെ കൊടുത്തിട്ടുള്ള കോവിഡുമായി ബന്ധപ്പെട്ട ചോദ്യങ്ങൾക്ക്, പറഞ്ഞിരിക്കുന്ന പ്രകാരം ഉത്തരങ്ങൾ ഇതോടൊപ്പം കൊടുത്തിട്ടുള്ള ചതുരത്തിലെ കോളങ്ങളിൽ മലയാളത്തിൽ പൂരിപ്പിച്ചാണ് അയക്കേണ്ടത്.  ഉത്തരത്തിലെ അക്ഷരങ്ങളുടെ എണ്ണം ബ്രാക്കറ്റിൽ കൊടുത്തിരിക്കുന്നു. ചന്ദ്രക്കല വരുന്ന മിക്കവാറും വാക്കുകൾ അതിന്റെ വിഘടിത രൂപത്തിലാണ് എടുക്കേണ്ടത്. ഉദാ : സ്നേക്ക്‌ എന്നാണെങ്കിൽ സ്‌, നേ, ക്ക് എന്നിങ്ങനെ മൂന്ന് അക്ഷരമാണ്‌. എന്നാൽ സാധാരണയായി കൂട്ടക്ഷരമായി മാത്രം എഴുതാറുള്ള അക്ഷരങ്ങൾ അങ്ങനെ തന്നെ എഴുതുകയും വേണം. ഉദാ : ക്ര, പ്ര, ട്ര, ത്ര, ഡ്ര എന്നിവ. എന്തായാലും, ഉത്തരത്തിലെ അക്ഷരങ്ങളുടെ എണ്ണവും ക്രോസ് ലിങ്കും നോക്കിയാൽ കൂട്ടക്ഷരമാണോ വിഘടിത രൂപമാണോ അവിടെ ചേരുന്നത് എന്നു തീരുമാനിക്കാം.
     </p>
