--- a/Puzzle/index.html
+++ b/Puzzle/index.html
@@ -35,7 +35,7 @@
     <p class="desig">18.05.2020, തിങ്കൾ</p>
     <p>a) മത്സരത്തിലേക്ക് താഴെ കൊടുത്തിട്ടുള്ള കോവിഡുമായി ബന്ധപ്പെട്ട ചോദ്യങ്ങൾക്ക്, പറഞ്ഞിരിക്കുന്ന പ്രകാരം ഉത്തരങ്ങൾ ഇതോടൊപ്പം കൊടുത്തിട്ടുള്ള ചതുരത്തിലെ കോളങ്ങളിൽ മലയാളത്തിൽ പൂരിപ്പിച്ചാണ് അയക്കേണ്ടത്.  ഉത്തരത്തിലെ അക്ഷരങ്ങളുടെ എണ്ണം ബ്രാക്കറ്റിൽ കൊടുത്തിരിക്കുന്നു. ചന്ദ്രക്കല വരുന്ന മിക്കവാറും വാക്കുകൾ അതിന്റെ വിഘടിത രൂപത്തിലാണ് എടുക്കേണ്ടത്. ഉദാ : സ്നേക്ക്‌ എന്നാണെങ്കിൽ സ്‌, നേ, ക്ക് എന്നിങ്ങനെ മൂന്ന് അക്ഷരമാണ്‌. എന്നാൽ സാധാരണയായി കൂട്ടക്ഷരമായി മാത്രം എഴുതാറുള്ള അക്ഷരങ്ങൾ അങ്ങനെ തന്നെ എഴുതുകയും വേണം. ഉദാ : ക്ര, പ്ര, ട്ര, ത്ര, ഡ്ര എന്നിവ. എന്തായാലും, ഉത്തരത്തിലെ അക്ഷരങ്ങളുടെ എണ്ണവും ക്രോസ് ലിങ്കും നോക്കിയാൽ കൂട്ടക്ഷരമാണോ വിഘടിത രൂപമാണോ അവിടെ ചേരുന്നത് എന്നു തീരുമാനിക്കാം.
     </p>
-    <p>b) ഇതോടൊപ്പുള്ള ചതുരത്തിലെ കോളങ്ങളിൽത്തന്നെ ക്ലിക്ക് ചെയ്ത് ഉത്തരങ്ങൾ ഇംഗ്ലീഷിൽ പൂരിപ്പിച്ച് സ്ക്രീൻ ഷോട്ട് എടുത്തോ, SUBMIT ക്ലിക്ക് ചെയ്തു ഡൗൺലോഡു ചെയ്തതോ  അയയ്ക്കാവുന്നതാണ്. അല്ലെങ്കിൽ ഇവിടെ കൊടുത്തിരിക്കുന്നതു പോലെ പേപ്പറിൽ ഇത്രയും എണ്ണം,  ഇതുപോലെ കോളങ്ങൾ ഉണ്ടാക്കി പൂരിപ്പിച്ച് ഫോട്ടൊ എടുത്ത് വ്യക്തമാകുന്ന രീതിയിൽ അയച്ചാലും മതിയാകുന്നതാണ്.</p>
+    <p>b) ഇതോടൊപ്പമുള്ള ചതുരത്തിലെ കോളങ്ങളിൽത്തന്നെ ക്ലിക്ക് ചെയ്ത് ഉത്തരങ്ങൾ മലയാളത്തിൽ പൂരിപ്പിച്ച് സ്ക്രീൻ ഷോട്ട് എടുത്തോ, SUBMIT ക്ലിക്ക് ചെയ്തു ഡൗൺലോഡു ചെയ്തതോ  അയയ്ക്കാവുന്നതാണ്. അല്ലെങ്കിൽ ഇവിടെ കൊടുത്തിരിക്കുന്നതു പോലെ പേപ്പറിൽ ഇത്രയും എണ്ണം,  ഇതുപോലെ കോളങ്ങൾ ഉണ്ടാക്കി പൂരിപ്പിച്ച് ഫോട്ടൊ എടുത്ത് വ്യക്തമാകുന്ന രീതിയിൽ അയച്ചാലും മതിയാകുന്നതാണ്.</p>
     <p>c) ചോദ്യങ്ങൾക്കു പറഞ്ഞിട്ടുള്ള രീതിയിൽ കോളത്തിൽ പൂരിപ്പിച്ച ഉത്തരങ്ങൾ 20.05.2020(ബുധൻ) വൈകിട്ട് 5ന് മുൻപായി  9446470689 എന്ന നമ്പറിലേക്ക് WhatsApp അയയ്ക്കണ്ടതാണ്</p>
     <p>d) മത്സരത്തിന് ഒരാൾ ഒരു എൻട്രിയിൽ കൂടുതൽ അയയ്ക്കാൻ പാടുള്ളതല്ല.</p>
     <p>e) മത്സരത്തിൽ പ്രായഭേദമെന്യെ, എവിടെയുമുള്ള ആർക്കു വേണമെങ്കിലും പങ്കെടുക്കാവുന്നതാണ്.</p>
@@ -165,7 +165,7 @@
     <p>4. ലോക്ഡൗൺ മൂലം കഷ്ടപ്പെടുന്നവർക്കായി പല ബാങ്കുകളും ഇതിൻ്റെ തിരിച്ചടവിന് മൊറൊട്ടോറിയം പ്രഖ്യാപിച്ചിട്ടുണ്ട് (2)</p>
     <p>7.  സമ്പൂർണ്ണ ലോക്ഡൗൺ കാലത്ത് പുറത്തിറങ്ങി ഇവിടെയൊക്കെയൊന്നു കറങ്ങാൻ മനസ്സുകൊണ്ട് കൊതിക്കാത്തവർ ആരുമുണ്ടാകില്ല (3)</p>
     <p>10.  ലോക്ഡൗൺ കാലത്ത് അനാവശ്യമായി പുറത്തിറങ്ങി പോലീസിൻ്റെ കയ്യിൽനിന്നും ഈ സമ്മാനം വാങ്ങിയ കുറച്ചുപേരെങ്കിലുമുണ്ടാകും (2) </p>
-    <p>12. സർക്കാർ തന്ന സൗജന്യ റേഷനിൻ ഈ അരിയും ഉണ്ടായിരുന്നു (2) </p>
+    <p>12. സർക്കാർ തന്ന സൗജന്യ റേഷനിൽ ഈ അരിയും ഉണ്ടായിരുന്നു (2) </p>
     <p>13. ഞായറാഴ്ചകളിൽ ഇപ്പോൾ പ്രഖ്യാപിച്ചിട്ടുള്ള പൂർണ്ണ ലോകഡൗണിലും ഇതിൻ്റെ വിതരണത്തിന് അനുമതിയുണ്ട് (2)</p>
     <p>14. കോവിഡ്-19 രോഗത്തിന് കാരണമായ കൊറോണവൈറസിൻ്റെ ശരിക്കുള്ള പേര് തുടങ്ങുന്നത് ഇങ്ങനെയാണ് (3)</p>
     <p>17. ഏറ്റവും അധികം കോവിഡ് രോഗികളുള്ള, ഒപ്പം കൂടുതൽ മരണവും സംഭവിച്ച ഇന്ത്യയിലെ സംസ്ഥാനം (5)</p>
@@ -185,7 +185,7 @@
     <p>6. ഏകദേശം ഒരു നൂറ്റാണ്ട് മുൻപ് ലോകത്ത് കോടിക്കണക്കിന് പേരുടെ ജീവനെടുത്ത വൈറസ് രോഗം (6)</p>
     <p> 8. വിദേശത്ത് കുടുങ്ങിയ പ്രവാസികളെ ഇന്ത്യയിലേക്ക് വിമാനമാർഗം മടക്കിക്കൊണ്ടുവരാൻ ആയി കേന്ദ്ര സർക്കാർ പ്രഖ്യാപിച്ച പദ്ധതി (5)</p>
     <p>9. ഇനിയുള്ള കാലം നമ്മുടെ ജീവിതം ഈ രീതിയിൽ ആയിരിക്കണമെന്ന ഒരു വലിയ പാഠം കൂടി ഈ കോവിഡ് കാലം നമ്മെ പഠിപ്പിക്കുന്നു (3)</p>
-    <p>10.  പ്രവാസികളെ തിരികെ കൊണ്ടുവരാനുള്ള ദൗത്യത്തിന് ഭാഗമായി ഈ രാജ്യത്ത് നിന്നുള്ളവരെയാണ് കൊച്ചിയിലേക്കുള്ള ആദ്യ വിമാനത്തിൽ മെയ് ഏഴിന് കൊണ്ടുവന്നത് (4)</p>
+    <p>10.  പ്രവാസികളെ തിരികെ കൊണ്ടുവരാനുള്ള ദൗത്യത്തിന്റെ ഭാഗമായി ഈ രാജ്യത്ത് നിന്നുള്ളവരെയാണ് കൊച്ചിയിലേക്കുള്ള ആദ്യ വിമാനത്തിൽ മെയ് ഏഴിന് കൊണ്ടുവന്നത് (4)</p>
     <p>11. ദേഹത്ത് സ്പർശിക്കാതെ ശരീരോഷ്മാവ് പരിശോധിക്കാനായി ഉപയോഗിക്കുന്ന ഉപകരണം (8)</p>
     <p>15. കോവിഡ് ട്രാക്കിങ്ങിനായുള്ള മൊബൈൽ ആപ്പ് (5)</p>
     <p>16. കോവിഡ്  രോഗികളിൽ ശ്വാസതടസ്സം മൂലം ഗുരുതരാവസ്ഥയിലായവർക്ക് ജീവൻ നിലനിർത്താൻ ഇതിൻ്റെ സഹായം കൂടിയേ തീരു (5)</p>
