--- a/Puzzle/index.html
+++ b/Puzzle/index.html
@@ -170,7 +170,7 @@
     <p>14. കോവിഡ്-19 രോഗത്തിന് കാരണമായ കൊറോണവൈറസിൻ്റെ ശരിക്കുള്ള പേര് തുടങ്ങുന്നത് ഇങ്ങനെയാണ് (3)</p>
     <p>17. ഏറ്റവും അധികം കോവിഡ് രോഗികളുള്ള, ഒപ്പം കൂടുതൽ മരണവും സംഭവിച്ച ഇന്ത്യയിലെ സംസ്ഥാനം (5)</p>
     <p>20. കോവിഡ് രോഗലക്ഷണമുള്ളവർ 1056 എന്ന ഇതിൻ്റെ ഹെൽപ്പ് ലൈനിൽ ബന്ധപ്പെടേണ്ടതാണ് (2)</p>
-    <p>22. 'സുരക്ഷിതമായിരിക്കൂ'  എന്ന് മുദ്രാവാക്യത്തിൻ്റെ ഇംഗ്ലീഷ് വേർഷനിലെ പകുതിഭാഗം (2)</p>
+    <p>22. 'സുരക്ഷിതമായിരിക്കൂ'  എന്ന മുദ്രാവാക്യത്തിൻ്റെ ഇംഗ്ലീഷ് വേർഷനിലെ പകുതിഭാഗം (2)</p>
     <p>23. ഏത് ഇതര സംസ്ഥാന തൊഴിലാളി ആണെങ്കിലും നമ്മൾ അവരെ ഇങ്ങനെയേ വിളിക്കൂ (3) </p>
     <p>24. സമ്പൂർണ്ണ ലോക്‌ഡൗൺ കാലത്ത് ഇത് വിൽക്കുന്ന കടകൾ തുറക്കാതിരുന്നതുമൂലം നവജാതശിശുക്കൾക്ക് കുഞ്ഞുടുപ്പു പോലും വാങ്ങാൻ പറ്റുന്നില്ലെന്ന് വാർത്ത ഉണ്ടായിരുന്നു (2)</p>
     <p> 25. ലോക്ഡൗൺ കാലത്ത് ഇത് അടഞ്ഞു കിടന്നത് കുടിയന്മാർക്ക് അക്കിടിയായി(2)</p>
